<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--<LinearLayout
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/syncData"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView

            android:id="@+id/syncTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/items_to_be_synced"/>

        <ImageView
            android:id="@+id/syncImageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_sync_black_24dp"/>

    </LinearLayout>
-->
<LinearLayout
    android:id="@+id/loginLayout"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:ems="13"
        android:inputType="textPersonName"
        android:background="@drawable/round_edittext"
        android:hint="@string/loginname" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:ems="13"
        android:inputType="textPassword"
        android:background="@drawable/round_edittext"
        android:hint="@string/loginpassword"/>



    <RelativeLayout
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:textColor="@color/buttontextcolor"
            android:ems="13"
            android:background="@drawable/round_button"
            android:text="@string/loginbuttontext" />

        <ProgressBar
            android:id="@+id/progressBar2"
            tools:visibility="visible"
            android:visibility="invisible"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/buttontextcolor"
            android:elevation="6dp"
            android:layout_width="30dp"
            android:layout_height="30dp" />



    </RelativeLayout>


</LinearLayout>

    <LinearLayout
        android:layout_centerInParent="true"
        android:id="@+id/dataLayout"
        android:orientation="vertical"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:ems="13"
            android:inputType="textCapWords"
            android:background="@drawable/round_edittext"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:maxLength="10"
            android:layout_margin="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:ems="13"
            android:inputType="phone"
            android:background="@drawable/round_edittext"
            android:hint="@string/phone_no"/>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:ems="13"
            android:inputType="textEmailAddress"
            android:background="@drawable/round_edittext"
            android:hint="@string/email_id" />

        <RelativeLayout
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                android:textColor="@color/buttontextcolor"
                android:ems="13"
                android:background="@drawable/round_button"
                android:text="@string/savebuttontext" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:visibility="invisible"
                android:layout_centerInParent="true"
                android:indeterminateTint="@color/buttontextcolor"
                android:layout_width="30dp"
                android:layout_height="30dp" />

        </RelativeLayout>






    </LinearLayout>

</RelativeLayout>